[project]
name = "nx"
version = "0.0.1"
description = "Very opinionated set of tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aioshutil>=1.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.6",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "shortuuid>=1.0.13",
    "unidecode>=1.3.8",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.0",
    "mypy>=1.14.1",
    "ruff>=0.9.4",
    "types-aiofiles>=24.1.0.20241221",
]

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
  "ISC001", # incompatible with formatting
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
exclude = "tests/|venv/|server/|api/"
explicit_package_bases = true
follow_imports = "silent"
no_implicit_reexport = true
strict = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
